syntax = "proto3";

package urgent;

message Urgent {
  int32 id = 1;
  int32 task_id = 2;
  int32 user_id = 3;
}

service UrgentService {
  rpc FetchUrgent(FetchUrgentRequest) returns (FetchUrgentResponse) {};
  rpc CreateUrgent(CreateUrgentRequest) returns (CreateUrgentResponse) {};
  rpc DeleteUrgent(DeleteUrgentRequest) returns (DeleteUrgentResponse) {};
}

message FetchUrgentRequest {
  int32 user_id = 1;
}

message FetchUrgentResponse {
  repeated Urgent urgent = 1;
}

message CreateUrgentRequest {
  int32 task_id = 1;
  int32 user_id = 2;
}

message CreateUrgentResponse {
  Urgent urgent = 1;
}

message DeleteUrgentRequest {
  int32 id = 1;
}

message DeleteUrgentResponse {
  Urgent urgent = 1;
}